--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/teamroles
+
+spring.datasource.username=root
+spring.datasource.password=testapp
+
+spring.jpa.hibernate.ddl-auto=update
+
+management.endpoint.metrics.enabled=true
+
+logging.level.org.apache.http=DEBUG
+logging.level.httpclient.wire=DEBUG
 
