--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/teamroles
 
 spring.datasource.username=root
-spring.datasource.password=testapp
+spring.datasource.password=*yourpassword*
 
 spring.jpa.hibernate.ddl-auto=update
 
